--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -24,7 +24,7 @@ BINFILES = align-equal align-equal-compiled acc-tree-stats \
         vector-sum matrix-sum-rows est-pca sum-lda-accs sum-mllt-accs \
 				loglikes-to-post copy-post-mapped weight-pdf-post \
 				split-speakers-on-diarization-assigments vector-apply-log \
-				matrix-scale matrix-sum-cols
+				matrix-scale matrix-sum-cols quantize-feats
 
 
 OBJFILES =
