snr: Programs to work with quantized binary feats

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -24,7 +24,8 @@ BINFILES = align-equal align-equal-compiled acc-tree-stats \
         vector-sum matrix-sum-rows est-pca sum-lda-accs sum-mllt-accs \
 				loglikes-to-post copy-post-mapped weight-pdf-post \
 				split-speakers-on-diarization-assigments vector-apply-log \
-				matrix-scale matrix-sum-cols quantize-feats
+				matrix-scale matrix-sum-cols quantize-feats post-to-bits \
+				acc-bool-vector-stats sum-bool-vector-stats
 
 
 OBJFILES =
@@ -32,7 +33,8 @@ OBJFILES =
 ADDLIBS = ../lm/kaldi-lm.a ../decoder/kaldi-decoder.a ../lat/kaldi-lat.a \
           ../hmm/kaldi-hmm.a ../transform/kaldi-transform.a ../gmm/kaldi-gmm.a \
 	      ../tree/kaldi-tree.a ../matrix/kaldi-matrix.a  ../util/kaldi-util.a \
-          ../base/kaldi-base.a  ../thread/kaldi-thread.a ../fstext/kaldi-fstext.a
+          ../base/kaldi-base.a  ../thread/kaldi-thread.a ../fstext/kaldi-fstext.a \
+					../decision-tree/kaldi-decision-tree.a
 
 
 TESTFILES =
