--- a/src/feat/Makefile
+++ b/src/feat/Makefile
@@ -7,7 +7,7 @@ include ../kaldi.mk
 TESTFILES = feature-mfcc-test feature-plp-test feature-fbank-test \
          feature-functions-test pitch-functions-test feature-sdc-test \
          resample-test online-feature-test sinusoid-detection-test \
-         signal-test
+         signal-test feature-stft-test
 
 OBJFILES = feature-functions.o feature-mfcc.o feature-plp.o feature-fbank.o \
            feature-spectrogram.o mel-computations.o wave-reader.o \
