snr: Some fix to combine-vector-segments program due to renaming of kaldi::Segment

--- a/src/featbin/Makefile
+++ b/src/featbin/Makefile
@@ -17,7 +17,8 @@ BINFILES = compute-mfcc-feats compute-plp-feats compute-fbank-feats \
     wav-reverberate append-vector-to-feats detect-sinusoids \
     extract-column compute-zero-crossings \
 		extract-vector-segments	combine-vector-segments \
-		compute-snr-targets compute-frame-snrs vector-to-feat
+		compute-snr-targets compute-frame-snrs vector-to-feat \
+		corrupt-wav
 
 OBJFILES = 
 
