--- a/.gitignore
+++ b/.gitignore
@@ -109,5 +109,12 @@ GSYMS
 /tools/pthreads*.zip
 /tools/sequitur
 /tools/srilm.tgz
+/tools/liblbfgs-1.10.tar.gz
+/tools/liblbfgs-1.10/
+/tools/openfst-1.5.0.tar.gz
+/tools/openfst-1.5.0/
+/tools/srilm-1.7.2-beta.tar.gz
+
 
 /kaldiwin_vs*
+
