adding configs for the OP3 langs

--- a/egs/babel/s5d/conf/lang/307-amharic.FLP.official.conf
+++ b/egs/babel/s5d/conf/lang/307-amharic.FLP.official.conf
@@ -1,10 +1,10 @@
 # include common settings for fullLP systems.
-. conf/common.limitedLP || exit 1;
+. conf/common.fullLP || exit 1;
 
 
 #speech corpora files location
 train_data_dir=/export/babel/data/307-amharic/IARPA-babel307b-v1.0b-build/BABEL_OP3_307/conversational/training
-train_data_list=./conf/lists/307-amharic//sub-train.list
+train_data_list=./conf/lists/307-amharic//training.list
 train_nj=32
 
 
@@ -33,19 +33,13 @@ dev10h_kwlists=(
 dev10h_nj=32
 
 
-#Unsupervised dataset for LimitedLP condition
-unsup_data_list=(
-    ./conf/lists/307-amharic//untranscribed-training.list
-    ./conf/lists/307-amharic//sub-train.untranscribed.list
-)  # unsup_data_list
-unsup_data_dir=(
-    /export/babel/data/307-amharic/IARPA-babel307b-v1.0b-build/BABEL_OP3_307/conversational/untranscribed-training
-    /export/babel/data/307-amharic/IARPA-babel307b-v1.0b-build/BABEL_OP3_307/conversational/training
-)  # unsup_data_dir
+#Unsupervised dataset for FullLP condition
+unsup_data_dir=/export/babel/data/307-amharic/IARPA-babel307b-v1.0b-build/BABEL_OP3_307/conversational/untranscribed-training
+unsup_data_list=./conf/lists/307-amharic//untranscribed-training.list
 unsup_nj=32
 
 
-lexicon_file=/export/babel/data/307-amharic/IARPA-babel307b-v1.0b-build/BABEL_OP3_307/conversational/reference_materials/lexicon.sub-train.txt
+lexicon_file=/export/babel/data/307-amharic/IARPA-babel307b-v1.0b-build/BABEL_OP3_307/conversational/reference_materials/lexicon.txt
 lexiconFlags="--romanized --oov <unk>"
 
 
