--- a/egs/babel/s5d/conf/lang/302-kazakh.LLP.official.conf
+++ b/egs/babel/s5d/conf/lang/302-kazakh.LLP.official.conf
@@ -44,7 +44,10 @@ eval_data_dir=/export/babel/data/302-kazakh/IARPA-babel302b-v1.0a-eval/BABEL_OP2
 eval_data_list=./conf/lists/302-kazakh//eval.list
 eval_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-eval.ecf.xml
 eval_kwlists=(
-    [kwlist4]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-eval.kwlist4.xml
+    [kwlist]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.annot.kwlist.xml
+    [kwlist2]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.annot.kwlist2.xml
+    [kwlist3]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.annot.kwlist3.xml
+    [kwlist4]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.annot.kwlist4.xml
 )  # eval_kwlists
 eval_nj=32
 
@@ -77,7 +80,10 @@ shadow_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-de
 shadow_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.mitllfa3.rttm
 shadow_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.stm
 shadow_kwlists=(
-    [kwlist4]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-eval.kwlist4.xml
+    [kwlist]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.annot.kwlist.xml
+    [kwlist2]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.annot.kwlist2.xml
+    [kwlist3]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.annot.kwlist3.xml
+    [kwlist4]=/export/babel/data/scoring/IndusDB/IARPA-babel302b-v1.0a_conv-dev/IARPA-babel302b-v1.0a_conv-dev.annot.kwlist4.xml
 )  # shadow_kwlists
 shadow_nj=32
 
