--- a/egs/babel/s5d/conf/lang/306-igbo.LLP.official.conf
+++ b/egs/babel/s5d/conf/lang/306-igbo.LLP.official.conf
@@ -11,8 +11,12 @@ train_nj=32
 #Radical reduced DEV corpora files location
 dev2h_data_dir=/export/babel/data/306-igbo/IARPA-babel306b-v2.0c-build/BABEL_OP3_306/conversational/dev
 dev2h_data_list=./conf/lists/306-igbo//dev.2h.list
-dev2h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v1.0b_conv-dev/IARPA-babel306b-v1.0b_conv-dev.scoring.ecf.xml
-dev2h_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v1.0b_conv-dev/IARPA-babel306b-v1.0b_conv-dev.stm
+dev2h_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v2.0c_conv-dev/IARPA-babel306b-v2.0c_conv-dev.mitllfa3.rttm
+dev2h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v2.0c_conv-dev/IARPA-babel306b-v2.0c_conv-dev.scoring.ecf.xml
+dev2h_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v2.0c_conv-dev/IARPA-babel306b-v2.0c_conv-dev.stm
+dev2h_kwlists=(
+    [kwlist]=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v2.0c_conv-dev/IARPA-babel306b-v2.0c_conv-dev.annot.kwlist.xml
+)  # dev2h_kwlists
 dev2h_nj=16
 dev2h_subset_ecf=true
 
@@ -20,8 +24,12 @@ dev2h_subset_ecf=true
 #Official DEV corpora files location
 dev10h_data_dir=/export/babel/data/306-igbo/IARPA-babel306b-v2.0c-build/BABEL_OP3_306/conversational/dev
 dev10h_data_list=./conf/lists/306-igbo//dev.list
-dev10h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v1.0b_conv-dev/IARPA-babel306b-v1.0b_conv-dev.scoring.ecf.xml
-dev10h_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v1.0b_conv-dev/IARPA-babel306b-v1.0b_conv-dev.stm
+dev10h_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v2.0c_conv-dev/IARPA-babel306b-v2.0c_conv-dev.mitllfa3.rttm
+dev10h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v2.0c_conv-dev/IARPA-babel306b-v2.0c_conv-dev.scoring.ecf.xml
+dev10h_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v2.0c_conv-dev/IARPA-babel306b-v2.0c_conv-dev.stm
+dev10h_kwlists=(
+    [kwlist]=/export/babel/data/scoring/IndusDB/IARPA-babel306b-v2.0c_conv-dev/IARPA-babel306b-v2.0c_conv-dev.annot.kwlist.xml
+)  # dev10h_kwlists
 dev10h_nj=32
 
 
