--- a/src/gmmbin/Makefile
+++ b/src/gmmbin/Makefile
@@ -15,7 +15,7 @@ BINFILES = gmm-init-mono gmm-est gmm-acc-stats-ali gmm-align \
            gmm-est-regtree-mllr gmm-compute-likes \
            gmm-decode-faster-regtree-mllr gmm-latgen-simple \
            gmm-rescore-lattice gmm-decode-biglm-faster \
-           gmm-est-gaussians-ebw gmm-est-weights-ebw gmm-latgen-faster gmm-copy \
+           gmm-est-gaussians-ebw gmm-est-weights-ebw gmm-latgen-faster gmm-latgen-faster-multi gmm-copy \
            gmm-global-acc-stats gmm-global-est gmm-global-sum-accs gmm-gselect \
            gmm-latgen-biglm-faster gmm-ismooth-stats gmm-global-get-frame-likes \
            gmm-global-est-fmllr gmm-global-to-fgmm gmm-global-acc-stats-twofeats \
