--- a/src/nnet3bin/Makefile
+++ b/src/nnet3bin/Makefile
@@ -7,11 +7,19 @@ LDFLAGS += $(CUDA_LDFLAGS)
 LDLIBS += $(CUDA_LDLIBS)
 
 BINFILES = nnet3-init nnet3-info nnet3-get-egs nnet3-copy-egs nnet3-subset-egs \
-   nnet3-shuffle-egs nnet3-acc-lda-stats nnet3-merge-egs \
    nnet3-compute-from-egs nnet3-train nnet3-am-init nnet3-am-train-transitions \
+           nnet3-get-egs-multi nnet3-am-init-multi \
+   nnet3-shuffle-egs nnet3-acc-lda-stats-multi nnet3-acc-lda-stats nnet3-merge-egs \
    nnet3-am-adjust-priors nnet3-am-copy nnet3-compute-prob \
    nnet3-average nnet3-am-info nnet3-combine nnet3-latgen-faster \
+   nnet3-latgen-faster-multi \
+   nnet3-combine-multi \
    nnet3-copy nnet3-show-progress nnet3-align-compiled \
+   nnet3-show-progress-multi \
+   nnet3-compute-from-egs-multi \
+   nnet3-am-train-transitions-multi \
+   nnet3-am-adjust-priors-multi \
+   nnet3-am-copy-multi \
    nnet3-get-egs-dense-targets nnet3-compute
 
 OBJFILES =
