add rescoring binaries and scripts

--- a/src/durmodbin/Makefile
+++ b/src/durmodbin/Makefile
@@ -4,7 +4,12 @@ all:
 EXTRA_CXXFLAGS = -Wno-sign-compare
 include ../kaldi.mk
 
-BINFILES = durmod-init durmod-make-egs durmod-copy
+LDFLAGS += $(CUDA_LDFLAGS)
+LDLIBS += $(CUDA_LDLIBS)
+
+
+BINFILES = durmod-init durmod-make-egs durmod-copy durmod-rescore-lattice \
+           durmod-info
 OBJFILES =
 
 
@@ -13,9 +18,10 @@ TESTFILES =
 
 
 ADDLIBS = ../durmod/kaldi-durmod.a ../nnet3/kaldi-nnet3.a \
-					../lat/kaldi-lat.a ../fstext/kaldi-fstext.a ../hmm/kaldi-hmm.a \
-					../tree/kaldi-tree.a ../matrix/kaldi-matrix.a \
-					../util/kaldi-util.a ../base/kaldi-base.a \
-					../cudamatrix/kaldi-cudamatrix.a ../thread/kaldi-thread.a
+          ../lat/kaldi-lat.a ../fstext/kaldi-fstext.a ../hmm/kaldi-hmm.a \
+	  ../tree/kaldi-tree.a ../matrix/kaldi-matrix.a \
+	  ../util/kaldi-util.a ../base/kaldi-base.a \
+	  ../thread/kaldi-thread.a \
+	  ../fstext/kaldi-fstext.a ../cudamatrix/kaldi-cudamatrix.a
 
 include ../makefiles/default_rules.mk
