Remove phone ngram expansion and some other minor changes

--- a/src/latbin/Makefile
+++ b/src/latbin/Makefile
@@ -20,8 +20,7 @@ BINFILES = lattice-best-path lattice-prune lattice-equivalent lattice-to-nbest \
            lattice-minimize lattice-limit-depth lattice-depth-per-frame \
            lattice-confidence lattice-determinize-phone-pruned \
            lattice-determinize-phone-pruned-parallel lattice-expand-ngram \
-           lattice-lmrescore-const-arpa lattice-lmrescore-rnnlm nbest-to-prons \
-           lattice-expand-ngram-phone
+           lattice-lmrescore-const-arpa lattice-lmrescore-rnnlm nbest-to-prons
 
 OBJFILES =
 
