--- a/src/durmodbin/Makefile
+++ b/src/durmodbin/Makefile
@@ -10,7 +10,7 @@ LDLIBS += $(CUDA_LDLIBS)
 
 BINFILES = nnet3-durmodel-init nnet3-durmodel-make-egs nnet3-durmodel-copy \
            nnet3-durmodel-rescore-lattice durmodel-info durmodel-init \
-           nnet3-durmodel-info
+           nnet3-durmodel-info nnet3-durmodel-copy-egs
 OBJFILES =
 
 
