A couple of fixes and tweaks. Added checks for tools, especially sox.

--- a/egs/babel/s5d/conf/lang/104-pashto-fullLP.official.conf
+++ b/egs/babel/s5d/conf/lang/104-pashto-fullLP.official.conf
@@ -27,6 +27,10 @@ dev10h_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-d
 dev10h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-eval.ecf.xml
 dev10h_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev/IARPA-babel104b-v0.4bY_conv-dev.mitllfa3.rttm
 dev10h_kwlist_file=/export/babel/data/splits/Pashto_Babel104/babel104b-v0.4bY_conv-dev.kwlist.xml
+dev10h_kwlists=(
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist.xml
+                      [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist2.xml
+)
 dev10h_more_kwlists=(
                       [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev.kwlist2.xml
@@ -48,6 +52,10 @@ evalpart1_stm_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_con
 evalpart1_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-evalpart1/IARPA-babel104b-v0.4bY_conv-evalpart1.scoring.ecf.xml
 evalpart1_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-evalpart1/IARPA-babel104b-v0.4bY_conv-evalpart1.mitllfa3.rttm
 evalpart1_kwlist_file=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev/IARPA-babel104b-v0.4bY_conv-dev.annot.kwlist.xml
+evalpart1_kwlists=(
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev/IARPA-babel104b-v0.4bY_conv-dev.annot.kwlist.xml
+                      [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-evalpart1/IARPA-babel104b-v0.4bY_conv-evalpart1.annot.kwlist2.xml
+)
 evalpart1_more_kwlists=(
                       [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-dev/IARPA-babel104b-v0.4bY_conv-dev.annot.kwlist.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel104b-v0.4bY_conv-evalpart1/IARPA-babel104b-v0.4bY_conv-evalpart1.annot.kwlist2.xml
