--- a/egs/babel/s5d/conf/lang/105-turkish-fullLP.official.conf
+++ b/egs/babel/s5d/conf/lang/105-turkish-fullLP.official.conf
@@ -1,6 +1,7 @@
 # include common settings for fullLP systems.
 . conf/common.fullLP || exit 1;
 
+
 #speech corpora files location
 train_data_dir=/export/babel/data/105-turkish/release-current-b/conversational/training
 train_data_list=/export/babel/data/splits/Turkish_Babel105/train.fullLP.list
@@ -17,6 +18,10 @@ dev2h_more_kwlists=(
                       [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev.kwlist.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev.kwlist2.xml
 )
+dev2h_kwlists=(
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev.kwlist.xml
+                      [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev.kwlist2.xml
+)
 dev2h_subset_ecf=true
 dev2h_nj=18
 
@@ -28,6 +33,10 @@ dev10h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev
 dev10h_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev/IARPA-babel105b-v0.4_conv-dev.mitllfa3.rttm
 dev10h_kwlist_file=/export/babel/data/splits/Turkish_Babel105/babel105b-v0.4_conv-dev.kwlist.xml
 dev10h_more_kwlists=(
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev.kwlist.xml
+                      [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev.kwlist2.xml
+)
+dev10h_kwlists=(
                       [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev.kwlist.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel105b-v0.4_conv-dev.kwlist2.xml
 )
