Do not overwrite user flags

--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -1,6 +1,6 @@
 
 all:
-EXTRA_CXXFLAGS = -Wno-sign-compare
+EXTRA_CXXFLAGS += -Wno-sign-compare
 include ../kaldi.mk
 
 BINFILES = align-equal align-equal-compiled acc-tree-stats \
