--- a/src/kwsbin/Makefile
+++ b/src/kwsbin/Makefile
@@ -1,7 +1,7 @@
 
 all:
 
-EXTRA_CXXFLAGS = -Wno-sign-compare
+EXTRA_CXXFLAGS += -Wno-sign-compare
 include ../kaldi.mk
 
 BINFILES = lattice-to-kws-index kws-index-union transcripts-to-fsts \
