--- a/src/cudamatrix/Makefile
+++ b/src/cudamatrix/Makefile
@@ -7,11 +7,12 @@ LDLIBS += $(CUDA_LDLIBS)
 
 TESTFILES = cu-vector-test cu-matrix-test cu-math-test cu-test cu-sp-matrix-test cu-packed-matrix-test cu-tp-matrix-test \
             cu-block-matrix-test cu-matrix-speed-test cu-vector-speed-test cu-sp-matrix-speed-test cu-array-test \
-	    cu-sparse-matrix-test cu-device-test
+		    cu-sparse-matrix-test cu-device-test cudnn-convolution-test
 
 OBJFILES = cu-device.o cu-math.o cu-matrix.o cu-packed-matrix.o cu-sp-matrix.o \
            cu-vector.o cu-common.o cu-tp-matrix.o cu-rand.o cu-block-matrix.o \
-           cu-sparse-matrix.o cu-allocator.o cu-array.o
+           cu-sparse-matrix.o cu-allocator.o cu-array.o cudnn-convolution.o
+
 ifeq ($(CUDA), true)
   OBJFILES += cu-kernels.o cu-randkernels.o
 endif
