--- a/src/Makefile
+++ b/src/Makefile
@@ -147,7 +147,7 @@ install: all
 	find $(SUBDIRS_BIN) -type f -executable -exec cp -v {} $(INSTALLPREFIX)/bin/ ';'
 	cp -av ../tools/sph2pipe_v2.5/sph2pipe $(INSTALLPREFIX)/bin/
 	# copying libs to $(INSTALLPREFIX)/lib
-	cp -av $(KALDILIBDIR)/*.so $(INSTALLPREFIX)/lib/
+	find $(SUBDIRS_LIB) -type f -name '*.so' -exec cp -v {} $(INSTALLPREFIX)/lib/ ';'
 	cp -av ../tools/openfst/lib/* $(INSTALLPREFIX)/lib/
 
 ### Dependency list ###
