--- a/src/ivectorbin/Makefile
+++ b/src/ivectorbin/Makefile
@@ -15,7 +15,8 @@ BINFILES = ivector-extractor-init ivector-extractor-acc-stats \
            ivector-subtract-global-mean ivector-plda-scoring \
            logistic-regression-train logistic-regression-eval \
            logistic-regression-copy create-split-from-vad \
-           ivector-extract-online ivector-adapt-plda
+           ivector-extract-online ivector-adapt-plda \
+	   ivector-extract-dense ivector-cluster
 
 OBJFILES =
 
