--- a/src/lm/Makefile
+++ b/src/lm/Makefile
@@ -12,6 +12,6 @@ OBJFILES = arpa-file-parser.o arpa-lm-compiler.o const-arpa-lm.o \
 LIBNAME = kaldi-lm
 
 ADDLIBS = ../fstext/kaldi-fstext.a ../util/kaldi-util.a ../thread/kaldi-thread.a \
-          ../matrix/kaldi-matrix.a ../base/kaldi-base.a
+          ../matrix/kaldi-matrix.a ../base/kaldi-base.a ../cuedlmcpu/cued-lm.a
 
 include ../makefiles/default_rules.mk
