--- a/.gitignore
+++ b/.gitignore
@@ -117,7 +117,8 @@ GSYMS
 /tools/openfst-1.5.0.tar.gz
 /tools/openfst-1.5.0/
 /tools/srilm-1.7.2-beta.tar.gz
-
+/tools/liblbfgs/
+/tools/sequitur-g2p/
 
 /kaldiwin_vs*
 
