--- a/egs/swbd/s5c/conf/offsets.conf
+++ b/egs/swbd/s5c/conf/offsets.conf
@@ -1,3 +1,4 @@
---cmn-offset-scale=0.5 # offset scale used to scale the covariance matrix
+--cmn-offset-scale=1.0 # offset scale used to scale the covariance matrix
 --num-cmn-offsets=5 
---preserve-total-covariance=false # If true, the total covariance for random offset of spks are preserved.
+--preserve-total-covariance=true # If true, the total covariance for random offset of spks are preserved.
+--zero-mean-offsets=true
