--- a/egs/ami/s5/rnnlm.config
+++ b/egs/ami/s5/rnnlm.config
@@ -5,8 +5,10 @@
   input-node name=input dim=200
   component name=first_nonlin type=SigmoidComponent dim=200
   component name=first_renorm type=NormalizeComponent dim=200 target-rms=1.0
+  component name=hidden_affine type=NaturalGradientAffineComponent input-dim=200 output-dim=200
 
 #Component nodes
-  component-node name=first_nonlin component=first_nonlin  input=Sum(input, IfDefined(Offset(first_renorm, -1)))
+  component-node name=first_nonlin component=first_nonlin  input=Sum(input, hidden_affine)
   component-node name=first_renorm component=first_renorm  input=first_nonlin
+  component-node name=hidden_affine component=hidden_affine  input=IfDefined(Offset(first_renorm, -1))
   output-node    name=output input=first_renorm objective=linear
