back using GPU for output layers

--- a/egs/ami/s5/rnnlm.config
+++ b/egs/ami/s5/rnnlm.config
@@ -5,7 +5,7 @@
   input-node name=input dim=200
   component name=first_nonlin type=SigmoidComponent dim=200
   component name=first_renorm type=NormalizeComponent dim=200 target-rms=1.0
-  component name=hidden_affine type=NaturalGradientAffineComponent input-dim=200 output-dim=200
+  component name=hidden_affine type=AffineComponent input-dim=200 output-dim=200
 
 #Component nodes
   component-node name=first_nonlin component=first_nonlin  input=Sum(input, hidden_affine)
