new based classes finished

--- a/src/rnnlm/Makefile
+++ b/src/rnnlm/Makefile
@@ -6,8 +6,9 @@ include ../kaldi.mk
 LDFLAGS += $(CUDA_LDFLAGS)
 LDLIBS += $(CUDA_LDLIBS)
 
-OBJFILES = rnnlm-component-itf.o rnnlm-utils.o  rnnlm-nnet.o rnnlm-training.o rnnlm-component.o nnet-parse.o \
-           rnnlm-diagnostics.o
+OBJFILES = rnnlm-component-itf.o rnnlm-utils.o  rnnlm-nnet.o  rnnlm-component.o nnet-parse.o \
+           rnnlm-training.o \
+#           rnnlm-diagnostics.o
 
 LIBNAME = kaldi-rnnlm
 
