--- a/src/rnnlmbin/Makefile
+++ b/src/rnnlmbin/Makefile
@@ -8,7 +8,7 @@ LDFLAGS += $(CUDA_LDFLAGS)
 LDLIBS += $(CUDA_LDLIBS)
 
 BINFILES = rnnlm-get-egs rnnlm-eval rnnlm-train rnnlm-init rnnlm-copy rnnlm-info \
-           rnnlm-compute-prob
+#           rnnlm-compute-prob
 
 OBJFILES =
 
