--- a/egs/babel/s5d/conf/lang/206-zulu-fullLP.official.conf
+++ b/egs/babel/s5d/conf/lang/206-zulu-fullLP.official.conf
@@ -15,7 +15,12 @@ dev2h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev
 dev2h_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev/IARPA-babel206b-v0.1e_conv-dev.mitllfa3.rttm
 dev2h_kwlist_file=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist.xml
 dev2h_more_kwlists=(
-                      [llp]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist2.xml
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist2.xml
+                      [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-eval.kwlist4.xml
+                    )
+dev2h_kwlists=(
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist.xml
+                      [dev2]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist2.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-eval.kwlist4.xml
                     )
 dev2h_subset_ecf=true
@@ -29,7 +34,12 @@ dev10h_ecf_file=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-de
 dev10h_rttm_file=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev/IARPA-babel206b-v0.1e_conv-dev.mitllfa3.rttm
 dev10h_kwlist_file=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist.xml
 dev10h_more_kwlists=(
-                      [llp]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist2.xml
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist2.xml
+                      [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-eval.kwlist4.xml
+                    )
+dev10h_kwlists=(
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist.xml
+                      [dev2]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist2.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-eval.kwlist4.xml
                     )
 dev10h_nj=32
@@ -54,6 +64,12 @@ evalpart1_more_kwlists=(
                       [llp2]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-evalpart1/IARPA-babel206b-v0.1e_conv-evalpart1.annot.kwlist3.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-evalpart1/IARPA-babel206b-v0.1e_conv-evalpart1.annot.kwlist4.xml
                     )
+evalpart1_kwlists=(
+                      [dev]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-evalpart1/IARPA-babel206b-v0.1e_conv-evalpart1.annot.kwlist.xml
+                      [llp1]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-evalpart1/IARPA-babel206b-v0.1e_conv-evalpart1.annot.kwlist2.xml
+                      [llp2]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-evalpart1/IARPA-babel206b-v0.1e_conv-evalpart1.annot.kwlist3.xml
+                      [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-evalpart1/IARPA-babel206b-v0.1e_conv-evalpart1.annot.kwlist4.xml
+                    )
 evalpart1_nj=32
 
 #Shadow data files 
@@ -72,6 +88,10 @@ shadow_more_kwlists=(
                       [llp]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist2.xml
                       [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-eval.kwlist4.xml
 
+                    )
+shadow_kwlists=(
+                      [llp]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-dev.kwlist2.xml
+                      [eval]=/export/babel/data/scoring/IndusDB/IARPA-babel206b-v0.1e_conv-eval.kwlist4.xml
                     )
 shadow_nj=32
 
