Implemented LeakyNum. Tested on CPU and GPU.

--- a/src/chain/Makefile
+++ b/src/chain/Makefile
@@ -9,7 +9,7 @@ TESTFILES = chain-supervision-test language-model-test
 
 OBJFILES = chain-supervision.o chain-numerator.o chain-den-graph.o \
           language-model.o chain-denominator.o chain-training.o \
-          chain-num-graph.o chain-cu-numerator.o
+          chain-num-graph.o chain-cu-numerator.o chain-cu-leakynum.o
 ifeq ($(CUDA), true)
   OBJFILES += chain-kernels.o
 endif
