add test code for SamplingWithoutReplacement()

--- a/src/rnnlm/Makefile
+++ b/src/rnnlm/Makefile
@@ -6,10 +6,11 @@ include ../kaldi.mk
 LDFLAGS += $(CUDA_LDFLAGS)
 LDLIBS += $(CUDA_LDLIBS)
 
-TESTFILES =
+TESTFILES = rnnlm-utils-test
 
 OBJFILES = rnnlm-component-itf.o rnnlm-utils.o  rnnlm-nnet.o  rnnlm-component.o nnet-parse.o \
            rnnlm-training.o \
+#           rnnlm-utils-test.o
 #           rnnlm-diagnostics.o
 #           rnnlm-test-utils.o
 
