the normalized-layer method works like magic

--- a/src/rnnlm/Makefile
+++ b/src/rnnlm/Makefile
@@ -10,8 +10,8 @@ TESTFILES =
 
 OBJFILES = rnnlm-component-itf.o rnnlm-utils.o  rnnlm-nnet.o  rnnlm-component.o nnet-parse.o \
            rnnlm-training.o \
+           rnnlm-diagnostics.o
 #           rnnlm-test-utils.o
-#           rnnlm-diagnostics.o
 
 LIBNAME = kaldi-rnnlm
 
