--- a/src/segmenterbin/Makefile
+++ b/src/segmenterbin/Makefile
@@ -16,7 +16,8 @@ BINFILES = segmentation-copy segmentation-get-stats \
 					 segmentation-combine-segments-to-recordings \
 					 segmentation-create-overlapped-subsegments \
 					 segmentation-intersect-segments \
-					 segmentation-init-from-additive-signals-info #\
+					 segmentation-init-from-additive-signals-info \
+					 class-counts-per-frame-to-labels#\
 					 gmm-acc-pdf-stats-segmentation \
 					 gmm-est-segmentation gmm-update-segmentation \
 					 segmentation-init-from-diarization \
