fixed small bugs

--- a/src/rnnlm/Makefile
+++ b/src/rnnlm/Makefile
@@ -10,7 +10,7 @@ TESTFILES =
 
 OBJFILES = rnnlm-component-itf.o rnnlm-utils.o  rnnlm-nnet.o  rnnlm-component.o nnet-parse.o \
            rnnlm-training.o \
-           rnnlm-diagnostics.o
+#           rnnlm-diagnostics.o
 #           rnnlm-test-utils.o
 
 LIBNAME = kaldi-rnnlm
