Handle failure of base/get_version.sh in base/Makefile.

--- a/src/base/Makefile
+++ b/src/base/Makefile
@@ -1,7 +1,16 @@
 # Whenever make is run in this directory, call ./get_version.sh script.
 # ./get_version.sh script regenerates ./version.h if necessary, e.g. if it
 # does not already exist or if the version number has changed.
-$(shell ./get_version.sh)
+RET := $(shell ./get_version.sh; echo " $$?")
+ifneq ($(strip $(RET)), 0)
+  RC := $(lastword $(RET))
+  OUT := $(wordlist 1,$(shell echo $$(($(words $(RET))-1))),$(RET))
+  ifeq ($(RC),0)
+    $(info $(OUT))
+  else
+    $(error $(OUT))
+  endif
+endif
 
 all:
 
