Address code review comments.

--- a/src/base/Makefile
+++ b/src/base/Makefile
@@ -1,10 +1,10 @@
-# Whenever make is run in this directory, call ./get_version.sh script.
-# ./get_version.sh script regenerates ./version.h if necessary, e.g. if it
-# does not already exist or if the version number has changed.
-RET := $(shell ./get_version.sh; echo " $$?")
-ifneq ($(strip $(RET)), 0)
-  RC := $(lastword $(RET))
-  OUT := $(wordlist 1,$(shell echo $$(($(words $(RET))-1))),$(RET))
+# Whenever make is run in this directory, call ./get_version.sh as the first
+# thing. This script regenereates ./version.h if necessary, e.g.
+# if it does not already exist or if the version number has changed.
+LOG := $(shell ./get_version.sh; echo " $$?")
+ifneq ($(strip $(LOG)), 0)
+  RC := $(lastword $(LOG))
+  OUT := $(wordlist 1,$(shell echo $$(($(words $(LOG))-1))),$(LOG))
   ifeq ($(RC),0)
     $(info $(OUT))
   else
